fix left behind backdrop from the loader on mobile devices

--- a/app/src/app/triangular/components/loader/loader.scss
+++ b/app/src/app/triangular/components/loader/loader.scss
@@ -1,4 +1,5 @@
 .loader {
+  background-color: #FFF;
   position: absolute;
   width: 100%;
   height: 100%;
